hphp/hack/test/dynamic_view/test_arrays.php.exp
File "test_arrays.php", line 7, characters 31-41:
  dynamic
File "test_arrays.php", line 10, characters 31-41:
  varray<dynamic>
File "test_arrays.php", line 11, characters 10-11:
Invalid return type (Typing[4110])
File "test_arrays.php", line 5, characters 25-27:
Expected int
File "test_arrays.php", line 2, characters 10-12:
But got dynamic
